// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiCardSelect is rendered 1`] = `
<button
  aria-checked="false"
  aria-label="aria-label"
  class="euiButtonEmpty euiButtonEmpty--xSmall euiCardSelect euiCardSelect--text testClass1 testClass2 css-15qfgye-empty-text"
  data-test-subj="test subject string"
  role="switch"
  type="button"
>
  <span
    class="euiButtonContent euiButtonEmpty__content"
  >
    <span
      class="euiButtonEmpty__text"
    >
      Select
    </span>
  </span>
</button>
`;

exports[`EuiCardSelect props can override color 1`] = `
<button
  aria-checked="false"
  class="euiButtonEmpty euiButtonEmpty--xSmall euiCardSelect euiCardSelect--danger css-hdemv5-empty-danger"
  role="switch"
  type="button"
>
  <span
    class="euiButtonContent euiButtonEmpty__content"
  >
    <span
      class="euiButtonEmpty__text"
    >
      Select
    </span>
  </span>
</button>
`;

exports[`EuiCardSelect props can override text 1`] = `
<button
  aria-checked="false"
  class="euiButtonEmpty euiButtonEmpty--xSmall euiCardSelect euiCardSelect--text css-15qfgye-empty-text"
  role="switch"
  type="button"
>
  <span
    class="euiButtonContent euiButtonEmpty__content"
  >
    <span
      class="euiButtonEmpty__text"
    >
      Custom text
    </span>
  </span>
</button>
`;

exports[`EuiCardSelect props isDisabled 1`] = `
<button
  aria-checked="false"
  class="euiButtonEmpty euiButtonEmpty--xSmall euiCardSelect euiCardSelect--text css-13li5q5-empty-disabled"
  disabled=""
  role="switch"
  type="button"
>
  <span
    class="euiButtonContent euiButtonEmpty__content"
  >
    <span
      class="euiButtonEmpty__text"
    >
      Unavailable
    </span>
  </span>
</button>
`;

exports[`EuiCardSelect props isSelected 1`] = `
<button
  aria-checked="true"
  class="euiButtonEmpty euiButtonEmpty--xSmall euiCardSelect euiCardSelect--success css-15qfgye-empty-text"
  role="switch"
  type="button"
>
  <span
    class="euiButtonContent euiButtonEmpty__content"
  >
    <span
      class="euiButtonContent__icon"
      color="inherit"
      data-euiicon-type="check"
    />
    <span
      class="euiButtonEmpty__text"
    >
      Selected
    </span>
  </span>
</button>
`;
